Add memory size limit on container