@@ -17,12 +17,23 @@ echo "========================================================"
 echo "Selenium Configuration"
 echo "========================================================"
 ROOT=/opt/selenium
-CONF=$ROOT/config.json
 
-/opt/bin/generate_config >$CONF
+if [ "$NODE_DEBUG" = "true" ]; then
+  export NODE_DEBUG_IMAGE="-debug"
+else
+  export NODE_DEBUG_IMAGE=""
+fi
+
+if [ ! -z "$HUB_CONFIG" ]; then
+  echo "using provided hub configuration: ${HUB_CONFIG}"
+else
+  echo "generate hub configuration..."
+  HUB_CONFIG=$ROOT/config.json
+  /opt/bin/generate_config >$HUB_CONFIG
+fi
 
 echo "starting selenium hub with configuration:"
-cat $CONF
+cat $HUB_CONFIG
 
 if [ ! -z "$SE_OPTS" ]; then
   echo "appending selenium options: ${SE_OPTS}"
@@ -44,19 +55,11 @@ echo ""
 echo "========================================================"
 echo "Start Hub ..."
 echo "========================================================"
-java -server \
-  -XX:+UnlockExperimentalVMOptions \
-  -XX:+UseCGroupMemoryLimitForHeap \
-  -XX:MaxRAMFraction=1 \
-  -XX:+UseG1GC \
-  -XX:+UseStringDeduplication \
-  -XshowSettings:vm \
-  -Dsun.net.inetaddr.ttl=60 \
-  ${JAVA_OPTS} \
+java ${GRID_JAVA_OPTS} \
   -cp $ROOT/just-ask-jar-with-dependencies.jar:$ROOT/selenium-server-standalone.jar \
   org.openqa.grid.selenium.GridLauncherV3 \
   -role hub \
-  -hubConfig $CONF \
+  -hubConfig $HUB_CONFIG \
   ${SE_OPTS} &
 NODE_PID=$!
 
